<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CityFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/franjacdmx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/franjacdmx"/>

        <android.support.v7.widget.CardView
            android:id="@+id/basic_info"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="105dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spanish"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/colorPrimaryLight"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/population"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/millions"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/colorPrimaryLight"/>


                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Weather"
            android:layout_below="@+id/basic_info"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@color/black_backgrund"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/weather_card"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/icon_weather"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        tools:src="@drawable/ic_sunrise"/>

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/condition_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Description"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:id="@+id/condition_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Thunderstorm"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/temp_day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Current"
                        android:textSize="15sp"
                        />
                    <TextView
                        android:id="@+id/current_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="18c"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"
                        android:textColor="@color/colorAccent"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About the City"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="@color/black_backgrund"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@+id/weather_card"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basicinfo"
            android:layout_below="@+id/about"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/black_backgrund"
            />

    </RelativeLayout>

</FrameLayout>